[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/Helpers/GUI/Settings/SettingsMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Levels/Menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/Levels/Title Screen Mock 1_Visible.png" type="Texture" id=3]
[ext_resource path="res://assets/Levels/Title Screen Mock 1_Rat Soldier.png" type="Texture" id=4]
[ext_resource path="res://assets/GUI/Theme/Themes/MenuTheme.tres" type="Theme" id=5]
[ext_resource path="res://assets/Levels/Title Screen Mock 1_RAT Boss Pixel.png" type="Texture" id=6]
[ext_resource path="res://assets/Levels/Title Screen Mock 1_Rat King.png" type="Texture" id=7]
[ext_resource path="res://assets/Levels/Title Screen Mock 1_Lirik Player.png" type="Texture" id=8]
[ext_resource path="res://assets/Levels/Title Screen Mock 1_Skull L.png" type="Texture" id=9]

[node name="MainMenu" type="Node2D"]
position = Vector2( 500, 250 )
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2550.08
margin_top = -2306.5
margin_right = 1449.92
margin_bottom = 1693.5
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer4" type="CenterContainer" parent="CanvasLayer"]
margin_left = 854.076
margin_top = 206.568
margin_right = 1601.08
margin_bottom = 943.568
rect_scale = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer4"]
margin_left = 82.0
margin_top = 5.0
margin_right = 664.0
margin_bottom = 731.0
texture = ExtResource( 7 )

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -249.073
margin_top = 40.6761
margin_right = 976.927
margin_bottom = 684.676
rect_scale = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer2"]
margin_right = 1226.0
margin_bottom = 644.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="CenterContainer" parent="CanvasLayer"]
margin_left = 820.058
margin_top = 332.56
margin_right = 1567.06
margin_bottom = 1069.56
rect_scale = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer3"]
margin_right = 747.0
margin_bottom = 737.0
texture = ExtResource( 6 )

[node name="CenterContainer5" type="CenterContainer" parent="CanvasLayer"]
margin_left = 17.3433
margin_top = 393.21
margin_right = 764.343
margin_bottom = 1130.21
rect_scale = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer5"]
margin_left = 146.0
margin_top = 21.0
margin_right = 599.0
margin_bottom = 716.0
texture = ExtResource( 8 )

[node name="CenterContainer6" type="CenterContainer" parent="CanvasLayer"]
margin_left = 192.207
margin_top = 389.205
margin_right = 939.207
margin_bottom = 1126.21
rect_scale = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer6"]
margin_left = 305.0
margin_top = 210.0
margin_right = 440.0
margin_bottom = 526.0
texture = ExtResource( 9 )

[node name="CenterContainer7" type="CenterContainer" parent="CanvasLayer"]
margin_left = 525.678
margin_top = 397.431
margin_right = 1272.68
margin_bottom = 1134.43
rect_scale = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer7"]
margin_left = 305.0
margin_top = 210.0
margin_right = 440.0
margin_bottom = 526.0
texture = ExtResource( 9 )
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -204.608
margin_top = -106.058
margin_right = 379.392
margin_bottom = 246.942
rect_scale = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer"]
margin_right = 584.0
margin_bottom = 353.0
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 80.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" parent="CanvasLayer/CenterContainer" instance=ExtResource( 1 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="MainMenuContainer" type="PanelContainer" parent="CanvasLayer/CenterContainer"]
margin_left = -100.0
margin_top = -63.0
margin_right = 100.0
margin_bottom = 62.0
rect_min_size = Vector2( 200, 125 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="Menu" type="VBoxContainer" parent="CanvasLayer/CenterContainer/MainMenuContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 120.0
theme = ExtResource( 5 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NewGameButton" type="Button" parent="CanvasLayer/CenterContainer/MainMenuContainer/Menu"]
margin_top = 3.0
margin_right = 190.0
margin_bottom = 27.0
text = "New Game"

[node name="LoadGameButton" type="Button" parent="CanvasLayer/CenterContainer/MainMenuContainer/Menu"]
margin_top = 31.0
margin_right = 190.0
margin_bottom = 55.0
text = "Load Game"

[node name="OptionsButton" type="Button" parent="CanvasLayer/CenterContainer/MainMenuContainer/Menu"]
margin_top = 59.0
margin_right = 190.0
margin_bottom = 83.0
text = "Options"

[node name="ExitButton" type="Button" parent="CanvasLayer/CenterContainer/MainMenuContainer/Menu"]
margin_top = 87.0
margin_right = 190.0
margin_bottom = 111.0
text = "Exit"

[connection signal="pressed" from="CanvasLayer/CenterContainer/MainMenuContainer/Menu/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/MainMenuContainer/Menu/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/MainMenuContainer/Menu/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/MainMenuContainer/Menu/ExitButton" to="." method="_on_ExitButton_pressed"]
